🐛 Correctly align macos titlebar buttons

--- a/common/browser/themes/shared/dotui/dot.inc.css
+++ b/common/browser/themes/shared/dotui/dot.inc.css
@@ -75,6 +75,8 @@
         justify-content: center;
         align-items: center;
         margin: 0 18px;
+        /* This stops the macos titlebar buttons from being centered */
+        width: 50px;
     }
 
     .titlebar-buttonbox-container > .titlebar-buttonbox {
